feat(payment-methods): replace PaymentMethod enum with DB-driven payment_methods table
- V20 migration: payment_methods table with composite PK (code, region), 13 seed rows,
  composite FK constraints from transactions, provider_fee_rates, recon_statements
- PaymentMethodEntity + PaymentMethodId (@IdClass composite PK) + PaymentMethodRepository
- Deleted PaymentMethod.java enum; all fields/params now use plain String
- All 4 provider adapters: supportedMethods() -> List<String>, calculateFee takes String
- AdminPaymentMethodController: GET/POST/PUT/DELETE with 409 guard on FK violation
- Frontend: PaymentMethods admin page, usePaymentMethods hooks, paymentMethodService
- Frontend types: PaymentMethod enum removed, PAYMENT_METHOD_LABELS const map added
- CLAUDE.md + PRD.md updated: V18-V20 migrations, port contract, React stack corrections

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>